--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -6,6 +6,10 @@
   body {
     @apply bg-orange-100;
   }
+  svg {
+    height: 30px;
+    width: 30px;
+  }
   h1 {
     @apply font-bold text-4xl my-4;
   }
@@ -29,5 +33,8 @@
   }
   .banner-div {
     @apply w-full py-6 px-8 flex justify-between items-center;
+  }
+  .h-72 {
+    height: 18rem;
   }
 }
